add speed read component

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "reading"
   ],
   "author": "lucas.plath@gmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^18.2.0"
+  }
 }
