--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "speed-read-v1",
   "version": "1.2.0",
   "description": "Speed reading react component that presents words to the user at a selectable words per minute and focuses the reader's eyes at a calculated point of each word to optimize reading speed",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "test",
     "build": "babel src --out-dir dist"
