--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lucasplath7"
+    "url": "https://github.com/lucasplath7/speed-read"
   },
   "keywords": [
     "speed-read",
     "reader",
     "text",
-    "reading"
+    "reading",
+    "skim reader",
+    "fast read",
+    "speed read"
   ],
   "author": "lucas.plath@gmail.com",
   "license": "ISC",
