--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,18 @@
 {
   "presets": [
-     "@babel/preset-env",
+     [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "useBuiltIns": false,
+        "corejs": "3.21.1",
+        "targets": {
+          "chrome": "99",
+          "ie": "9"
+        },
+        "debug": true
+      }
+     ],
      "@babel/preset-react"
  ]
 }
