--- a/babel.config.json
+++ b/babel.config.json
@@ -4,7 +4,7 @@
       "@babel/preset-env",
       {
         "modules": true,
-        "useBuiltIns": false,
+        "useBuiltIns": true,
         "corejs": "3.21.1",
         "targets": {
           "chrome": "99",
